Spacing fixed on under construction pages

--- a/style/main_style.css
+++ b/style/main_style.css
@@ -261,7 +261,7 @@ h1 {
 
 .under-construction img {
   height: 50vh; /* re-download image */
-  margin-left: 35%;
+  margin-left: 37%;
 }
 
 .under-construction p {
